# td2-proyecto

./: .gitignore  CMakeLists.txt  stash.txt
ajedrez_td2/: .cproject  .mxproject  .project  STM32F401RETX_FLASH.ld  ajedrez_td2 Debug.launch  ajedrez_td2 Release.launch  ajedrez_td2.ioc
ajedrez_td2/Debug/: ajedrez_td2.elf  ajedrez_td2.list  ajedrez_td2.map  makefile  objects.list  sources.mk
ajedrez_td2/Release/: ajedrez_td2.elf  ajedrez_td2.list  ajedrez_td2.map  makefile
altium/: Uso Pines.txt
altium/MagicChess_Board/: Board.SchDoc  MagicChess_Board.PrjPcb
autodesk/: AcrylicLaserExports.dwg  AcrylicLaserExports_CAD2010.dwg  BackWall.ipt  BaseBoard.ipt  BottomBoard.ipt  FrontWall.ipt  LedBoard.ipt  MDFLaserExports.dwg  MDFLaserExports_CAD2010.dwg  MagicChess.iam  MagicChess.ipj  SeparatorAssembly.iam  SeparatorPiece.ipt  SeparatorPiece2.ipt  SideWall.ipt  TopBoard.ipt  Window.ipt  ~AcrylicLaserExports.dwg.8516.tmp  ~MDFLaserExports.dwg.8516.tmp
autodesk/OldVersions/: BaseBoard.0003.ipt  Board.0003.iam  Board.0004.ipt  BottomBoard.0001.ipt  FrontWall.0001.ipt  LaserExports.0002.dwg  LedBoard.0006.ipt  LeftBaseWall.0001.ipt  MagicChess.0019.iam  SeparatorAssembly.0010.iam  SeparatorPiece.0010.ipt  SeparatorPiece2.0007.ipt  Separators.0001.ipt  TopBoard.0012.ipt
piezas/: Hex_Bishop.stl  Hex_King.stl  Hex_Knight.stl  Hex_Pawn.stl  Hex_Queen.stl  Hex_Rook.stl
soft_dev/: CMakeLists.txt
src/: graphics.c  graphics.h  main.c  movement.c  movement.h
src/engine/: board.c  board.h  engine.h  interface.h  moves.c
src/game/: game.c  game.h  movement.c  movement.h
(+304 files in other folders)
